-Old hunter piece tiles now give off light to make them easier to find
-Old hunter pieces now have better generation and place in spots that are a bit easier to find
-All fishing rods can now fish in the blood lake in the eye valley, but the goblin shark rod is still the only way to fish up the blood lake enemies


Removals:

-Removed all the previous catacomb second layer enemies, replaced with new ones mentioned above
-Removed the cotton swabs crafting recipe due to its new obtainment method
-Removed the mechanic where gravestones wouldn't spawn if you died in the catacombs since you can now break blocks in it




~BUGS AND OTHER FIXES~


Fixed all of the following bugs and issues:

-Spider stealth buff incorrectly displaying 20% increased damage reduction instead of 12%
-Combined creepypasta accessory not giving the red mist clarinet ability
-Spooky mod ambient grasses, vines, and other plants growing underwater
-Tarantula hawks not dropping the enemy they are carrying if they are killed before dropping it
-Goblin shark rod drawing the fishing line at the incorrect position if the player is using any of the vanilla fishing bobber accessories
-Swampy cemetery sometimes generating over large amounts of the jungle, and generating on top of the desert if the desert generates past the jungle
-Spider grotto sometimes generating over the dungeon, and sometimes spawning a bit too close to the snow biome
-Hallucination entities not facing towards the player correctly
-"Graveyard without the G" and "Bonerattlin' Raving" not displaying with the music display mod for their individual vinyls
-Spooky mod cooldown buffs being removed when you are healed by the nurse
-Crux not killing its debuff aura if it was using one when killed
-Boro's charging speed for its horizontal dash attack being slower while enraged instead of faster