@@ -18,18 +18,21 @@ namespace Spooky.Content.NPCs.Boss.Moco.Projectiles
 
         private static Asset<Texture2D> ProjTexture;
 
+        public static readonly SoundStyle FlyingSound = new("Spooky/Content/Sounds/Moco/MocoFlying", SoundType.Sound) { Pitch = 0.45f };
+
         public override void SetStaticDefaults()
         {
             Main.projFrames[Projectile.type] = 9;
             ProjectileID.Sets.TrailCacheLength[Projectile.type] = 5;
-            ProjectileID.Sets.TrailingMode[Projectile.type] = 0;
+            ProjectileID.Sets.TrailingMode[Projectile.type] = 2;
         }
 
         public override void SetDefaults()
 		{
 			Projectile.width = 24;
 			Projectile.height = 26;
-			Projectile.friendly = true;
+			Projectile.friendly = false;
+            Projectile.hostile = true;
 			Projectile.tileCollide = false;
 			Projectile.timeLeft = 240;
             Projectile.penetrate = 3;
@@ -40,24 +43,35 @@ namespace Spooky.Content.NPCs.Boss.Moco.Projectiles
         {
             ProjTexture ??= ModContent.Request<Texture2D>(Texture);
 
-            Vector2 drawOrigin = new(ProjTexture.Width() * 0.5f, Projectile.height * 0.5f);
+            Color color = new Color(125 - Projectile.alpha, 125 - Projectile.alpha, 125 - Projectile.alpha, 0).MultiplyRGBA(Color.Lime);
 
-            var effects = Projectile.spriteDirection == -1 ? SpriteEffects.None : SpriteEffects.FlipHorizontally;
+            Vector2 drawOrigin = new(ProjTexture.Width() * 0.5f, Projectile.height * 0.5f);
 
             for (int oldPos = 0; oldPos < Projectile.oldPos.Length; oldPos++)
             {
+                var effects = Projectile.direction == -1 ? SpriteEffects.None : SpriteEffects.FlipHorizontally;
                 float scale = Projectile.scale * (Projectile.oldPos.Length - oldPos) / Projectile.oldPos.Length * 1f;
                 Vector2 drawPos = Projectile.oldPos[oldPos] - Main.screenPosition + drawOrigin + new Vector2(0f, Projectile.gfxOffY);
-                Color color = Projectile.GetAlpha(Color.DarkGreen) * ((float)(Projectile.oldPos.Length - oldPos) / (float)Projectile.oldPos.Length);
                 Rectangle rectangle = new(0, (ProjTexture.Height() / Main.projFrames[Projectile.type]) * Projectile.frame, ProjTexture.Width(), ProjTexture.Height() / Main.projFrames[Projectile.type]);
-                Main.EntitySpriteDraw(ProjTexture.Value, drawPos, rectangle, color, Projectile.rotation, drawOrigin, scale, SpriteEffects.None, 0);
+                Main.EntitySpriteDraw(ProjTexture.Value, drawPos, rectangle, Projectile.GetAlpha(color), Projectile.oldRot[oldPos], drawOrigin, scale * 1.1f, effects, 0);
             }
-            
+
             return true;
         }
 
 		public override void AI()
 		{
+            Projectile.frameCounter++;
+            if (Projectile.frameCounter >= 2)
+            {
+                Projectile.frame++;
+                Projectile.frameCounter = 0;
+                if (Projectile.frame >= 8)
+                {
+                    Projectile.frame = 0;
+                }
+            }
+
             Player player = Main.player[Projectile.owner];
 
             Projectile.direction = Projectile.spriteDirection = Projectile.velocity.X > 0f ? -1 : 1;
@@ -70,9 +84,9 @@ namespace Spooky.Content.NPCs.Boss.Moco.Projectiles
 
             Projectile.ai[0]++;
 
-            if (Projectile.ai[0] == 1)
+            if (Projectile.ai[0] < 10)
             {
-                Vector2 GoTo = player.Center + new Vector2(Main.rand.Next(-50, 51), Main.rand.Next(-100, -50));
+                Vector2 GoTo = player.Center + new Vector2(Main.rand.Next(-250, 250), Main.rand.Next(-350, -250));
 
                 if (Projectile.Distance(GoTo) >= 200f)
                 { 
@@ -93,9 +107,9 @@ namespace Spooky.Content.NPCs.Boss.Moco.Projectiles
                 Projectile.velocity = Vector2.Lerp(GoToVelocity.SafeNormalize(Vector2.Zero) * velocityLength, GoToVelocity / 6f, lerpValue);
             }
 
-            if (Projectile.ai[0] > 1 && Projectile.ai[0] < 30)
+            if (Projectile.ai[0] >= 10 && Projectile.ai[0] <= 40)
             {
-                Projectile.velocity *= 0.92f;
+                Projectile.velocity *= 0.85f;
             }
             
             if (Projectile.ai[0] == 45)
@@ -103,19 +117,19 @@ namespace Spooky.Content.NPCs.Boss.Moco.Projectiles
                 SaveProjPosition = Projectile.Center;
             }
 
-            if (Projectile.ai[0] > 45 && Projectile.ai[0] <= 60)
+            if (Projectile.ai[0] > 45 && Projectile.ai[0] <= 55)
             {
                 Projectile.Center = new Vector2(SaveProjPosition.X, SaveProjPosition.Y);
-                Projectile.Center += Main.rand.NextVector2Square(-3, 3);
+                Projectile.Center += Main.rand.NextVector2Square(-6, 6);
             }
 
-            if (Projectile.localAI[0] == 65)
+            if (Projectile.ai[0] == 60)
             {
                 double Velocity = Math.Atan2(player.position.Y - Projectile.position.Y, player.position.X - Projectile.position.X);
-                Projectile.velocity = new Vector2((float)Math.Cos(Velocity), (float)Math.Sin(Velocity)) * 12;
+                Projectile.velocity = new Vector2((float)Math.Cos(Velocity), (float)Math.Sin(Velocity)) * 17;
             }
 
-            if (Projectile.localAI[0] > 70)
+            if (Projectile.ai[0] > 60)
             {
                 Projectile.tileCollide = true;
             }
@@ -127,7 +141,7 @@ namespace Spooky.Content.NPCs.Boss.Moco.Projectiles
 
         	if (Main.netMode != NetmodeID.Server) 
             {
-                Gore.NewGore(Projectile.GetSource_Death(), Projectile.Center, Projectile.velocity, ModContent.Find<ModGore>("Spooky/MoclingGore").Type);
+                Gore.NewGore(Projectile.GetSource_Death(), Projectile.Center, Projectile.velocity, ModContent.Find<ModGore>("Spooky/MoclingProjectileGore").Type);
             }
 		}
 	}
